--- a/.github/workflows/loria.yml
+++ b/.github/workflows/loria.yml
@@ -12,11 +12,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Lua and other packages
-        run:
-          - sudo apt-get install lua5.1
-          - git clone https://github.com/bakpakin/Fennel
-          - export PATH=$PATH:`pwd`/Fennel
-          - (cd Fennel && make)
+        run: |
+          sudo apt-get install lua5.1
+          git clone https://github.com/bakpakin/Fennel
+          export PATH=$PATH:`pwd`/Fennel
+          (cd Fennel && make)
 
       - name: Build code
         run: make
