--- a/.github/workflows/loria.yml
+++ b/.github/workflows/loria.yml
@@ -33,9 +33,7 @@ jobs:
           path: loria/
 
       - name: Check if Git tag exists
-        run: |
-          export ACTIONS_ALLOW_UNSECURE_COMMANDS=true
-          echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
+        run: ACTIONS_ALLOW_UNSECURE_COMMANDS=true echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
 
       - name: Make release if Git tag exists
         uses: "marvinpinto/action-automatic-releases@latest"
