semantic versioning, really?

--- a/.github/workflows/loria.yml
+++ b/.github/workflows/loria.yml
@@ -48,6 +48,7 @@ jobs:
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "${{ env.HEAD_TAG }}"
           prerelease: false
           files: loria.tgz
         if: ${{ env.HEAD_TAG != '' }}
